<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LayoutView"
        android:orientation="horizontal">

    <TextView
        android:text="@string/detail_ratings_label"
        android:textStyle="bold"
        style="@style/TextViewStyle"
        android:layout_weight="2"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/rating_tv"
        style="@style/TextViewStyle"
        android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/LayoutView"
    android:orientation="horizontal">

    <TextView
        android:text="@string/detail_release_date_label"
        android:textStyle="bold"
        style="@style/TextViewStyle"
        android:layout_weight="2"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/release_date_tv"
        style="@style/TextViewStyle"
        android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LayoutView"
        android:orientation="horizontal">

    <TextView
        android:text="@string/detail_synopsis_label"
        android:textStyle="bold"
        style="@style/TextViewStyle"
        android:layout_weight="2"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/synopsis_tv"
        style="@style/TextViewStyle"
        android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>