<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/LayoutView"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image_iv"
        android:layout_width="@dimen/image_layout_width"
        android:layout_height="@dimen/image_layout_height"
        android:adjustViewBounds="true"
        android:layout_gravity="center"
        android:contentDescription="@string/poster_image_thumbnail_content_description"
        style="@style/LayoutView"
        android:layout_marginBottom="@dimen/activity_layout_margin"
        android:scaleType="centerCrop" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_layout_margin"
        android:background="@color/whitebackground"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/LayoutView"
        android:orientation="vertical">

        <Button
            android:id="@+id/favorite_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_button"
            style="@style/LayoutView"
            android:drawableLeft="@android:drawable/star_off"
            android:text="@string/mark_as_favorite_btn_label"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/activity_layout_margin"
            android:background="@color/whitebackground"/>

        <Button
            android:id="@+id/trailer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_button"
            style="@style/LayoutView"
            android:drawableLeft="@android:drawable/ic_media_play"
            android:text="@string/trailers_button_label"
            android:textColor="@color/white"
            android:drawableStart="@android:drawable/ic_media_play" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/activity_layout_margin"
            android:background="@color/whitebackground"/>

        <Button
            android:id="@+id/reviews_button"
            style="@style/LayoutView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_button"
            android:drawableLeft="@android:drawable/ic_dialog_info"
            android:drawableStart="@android:drawable/ic_dialog_info"
            android:text="@string/review_button_label"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>