<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_layout_margin"
        tools:context="com.udacity.sandwichclub.DetailActivity">

        <ImageView
            android:id="@+id/image_iv"
            android:layout_width="@dimen/image_layout_width"
            android:layout_height="@dimen/image_layout_height"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:contentDescription="@string/poster_image_thumbnail_content_description"
            android:layout_marginStart="@dimen/activity_layout_margin"
            android:layout_marginTop="@dimen/activity_layout_margin"
            android:layout_marginLeft="@dimen/activity_layout_margin"
            android:layout_marginEnd="@dimen/activity_layout_margin"
            android:layout_marginRight="@dimen/activity_layout_margin"
            android:layout_marginBottom="@dimen/activity_layout_margin"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_layout_margin"
            android:layout_marginLeft="@dimen/activity_layout_margin"
            android:layout_marginRight="@dimen/activity_layout_margin"
            android:layout_marginEnd="@dimen/activity_layout_margin"
            android:layout_marginStart="@dimen/activity_layout_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_original_title_label"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/activity_layout_margin"
                android:layout_marginTop="@dimen/activity_layout_margin"
                android:layout_marginLeft="@dimen/activity_layout_margin"
                android:layout_weight="2"/>

            <TextView
                android:id="@+id/original_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_layout_margin"
                android:layout_marginTop="@dimen/activity_layout_margin"
                android:layout_marginLeft="@dimen/activity_layout_margin"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_layout_margin"
            android:layout_marginLeft="@dimen/activity_layout_margin"
            android:layout_marginRight="@dimen/activity_layout_margin"
            android:layout_marginEnd="@dimen/activity_layout_margin"
            android:layout_marginStart="@dimen/activity_layout_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_ratings_label"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/activity_layout_margin"
                android:layout_marginTop="@dimen/activity_layout_margin"
                android:layout_marginLeft="@dimen/activity_layout_margin"
                android:layout_weight="2"/>

            <TextView
                android:id="@+id/rating_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_layout_margin"
                android:layout_marginTop="@dimen/activity_layout_margin"
                android:layout_marginLeft="@dimen/activity_layout_margin"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_layout_margin"
            android:layout_marginLeft="@dimen/activity_layout_margin"
            android:layout_marginRight="@dimen/activity_layout_margin"
            android:layout_marginEnd="@dimen/activity_layout_margin"
            android:layout_marginStart="@dimen/activity_layout_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_release_date_label"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/activity_layout_margin"
                android:layout_marginTop="@dimen/activity_layout_margin"
                android:layout_marginLeft="@dimen/activity_layout_margin"
                android:layout_weight="2"/>

            <TextView
                android:id="@+id/release_date_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_layout_margin"
                android:layout_marginTop="@dimen/activity_layout_margin"
                android:layout_marginLeft="@dimen/activity_layout_margin"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_layout_margin"
            android:layout_marginLeft="@dimen/activity_layout_margin"
            android:layout_marginRight="@dimen/activity_layout_margin"
            android:layout_marginEnd="@dimen/activity_layout_margin"
            android:layout_marginStart="@dimen/activity_layout_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_synopsis_label"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/activity_layout_margin"
                android:layout_marginTop="@dimen/activity_layout_margin"
                android:layout_marginLeft="@dimen/activity_layout_margin"
                android:layout_weight="2"/>

            <TextView
                android:id="@+id/synopsis_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_layout_margin"
                android:layout_marginTop="@dimen/activity_layout_margin"
                android:layout_marginLeft="@dimen/activity_layout_margin"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>